--- a/weekendNotes.html
+++ b/weekendNotes.html
@@ -560,6 +560,17 @@
                 Read more
               </a>
             </div>
+            <div class="weekend-content__weekend-column text-uppercase">
+              False Assumptions and Inconvenient Truths
+              <br>
+              <br>
+              <p class="weekend-content__card-text">
+                April, 2019
+              </p>
+              <a target="_blank" href="./assets/resources/OR-False-Assumptions-and-Inconvenient-Truths-April2019-220222.pdf" class="pink-link pink-link--card">
+                Read more
+              </a>
+            </div>
           </div>
         </div>
       </div>
