--- a/digital.html
+++ b/digital.html
@@ -176,7 +176,7 @@
                     summation has lifted us from the Stone Age to the space station. The journey has only just begun.
                     This should be obvious to everyone but the most hopeless pessimist…
                 </p>
-                <a href="/" class="digital-read__content-cta">
+                <a target="_blank" href="./assets/resources/The Case for Digital Assets.pdf" class="digital-read__content-cta">
                     View research paper
                 </a>
             </div>
@@ -190,7 +190,7 @@
                     native currency will be driven by ether’s collateral value, deepening its reserve-asset appeal to
                     the decentralized financial ecosystem. The future has just begun…
                 </p>
-                <a href="/" class="digital-read__content-cta">
+                <a target="_blank" href="./assets/resources/Ethereum - The Future of Finance - October 2021.pdf" class="digital-read__content-cta">
                     View research paper
                 </a>
             </div>
