--- a/alternative.html
+++ b/alternative.html
@@ -4,7 +4,6 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="format-detection" content="telephone=no">
         <link rel="stylesheet" href="./css/style.css" />
         <link rel="stylesheet" href="./assets/fonts/IvyMode/index.css" />
         <link rel="stylesheet" href="./assets/fonts/Optima/index.css" />
@@ -353,7 +352,7 @@
                                 in the construction of durable portfolios…
                             </p>
     
-                            <a href="" class="pink-link u-text-white" style="font-weight: bold;">
+                            <a target="_blank" href="./assets/resources/OR-Improving+the+Industry's+Dominant+Portfolios+-+With+2020+Update-220222.pdf" class="pink-link u-text-white" style="font-weight: bold;">
                               VIEW RESEARCH PAPER
                             </a>
                         </div>
@@ -371,7 +370,7 @@
                             been broad based demand destructions but recent data reflect something more complex…
                         </p>
     
-                          <a href="" class="pink-link u-text-white" style="font-weight: bold;">
+                          <a target="_blank" href="./assets/resources/OR-Recent-Inflation-Observations_-May-2020-220222.pdf" class="pink-link u-text-white" style="font-weight: bold;">
                             VIEW RESEARCH PAPER
                           </a>
                         </div>
