--- a/weekendNotes.html
+++ b/weekendNotes.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="format-detection" content="telephone=no">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./assets/fonts/IvyMode/index.css">
@@ -589,6 +588,36 @@
                 April, 2019
               </p>
               <a target="_blank" href="./assets/resources/OR-False-Assumptions-and-Inconvenient-Truths-April2019-220222.pdf" class="pink-link pink-link--card">
+                Read more
+              </a>
+            </div>
+            <div class="weekend-content__weekend-column text-uppercase">
+              Market Notes - HIGHER VOLATILITY,
+              MORE STABILITY
+              <br>
+              <br>
+              <br>
+              <br>
+              
+              <p class="weekend-content__card-text">
+                MARCH 2022
+              </p>
+              <a target="_blank" href="./assets/resources/market notes- market notes Higher Volatility, More Stability 2203 (1).pdf" class="pink-link pink-link--card">
+                Read more
+              </a>
+            </div>
+            <div class="weekend-content__weekend-column text-uppercase">
+              1960s Regime Shift
+              <br>
+              <br>
+              <br>
+              <br>
+              <br>
+              
+              <p class="weekend-content__card-text">
+                NOVEMBER 2019
+              </p>
+              <a target="_blank" href="./assets/resources/OR-Lessons from The Origins of The Great Inflation for Today-220222 (4).pdf" class="pink-link pink-link--card">
                 Read more
               </a>
             </div>
