--- a/about.html
+++ b/about.html
@@ -110,10 +110,6 @@
                         class="u-image-cover">
                 </div>
                 <div class="about-banner__carousel-item">
-                    <img src="./assets/images/about/investment-team/Marcel-Kasumovich.jpg" alt="Our Team member"
-                        class="u-image-cover">
-                </div>
-                <div class="about-banner__carousel-item">
                     <img src="./assets/images/about/investment-team/Ian-Gardiner,-CFA.jpg" alt="Our Team member"
                         class="u-image-cover">
                 </div>
@@ -166,10 +162,6 @@
                         class="u-image-cover">
                 </div>
                 <div class="about-banner__carousel-item">
-                    <img src="./assets/images/about/non-investment-team/Sebastian-Pedro-Bea.jpg" alt="Our member"
-                        class="u-image-cover">
-                </div>
-                <div class="about-banner__carousel-item">
                     <img src="./assets/images/about/non-investment-team/Jasmine-Burgess.jpg" alt="Our member"
                         class="u-image-cover">
                 </div>
@@ -197,10 +189,10 @@
                     <img src="./assets/images/about/non-investment-team/Annabel-Nottebohm.jpg" alt="Our member"
                         class="u-image-cover">
                 </div>
-                <div class="about-banner__carousel-item">
+                <!-- <div class="about-banner__carousel-item">
                     <img src="./assets/images/about/non-investment-team/York-Yu.jpg" alt="Our member"
                         class="u-image-cover">
-                </div>
+                </div> -->
                 <div class="about-banner__carousel-item">
                     <img src="./assets/images/about/non-investment-team/Theo-Antonitis.jpg" alt="Our member"
                         class="u-image-cover">
@@ -231,6 +223,14 @@
                 </div>
                 <div class="about-banner__carousel-item">
                     <img src="./assets/images/about/investment-team/Mathias-Nwokejiobi.png" alt="Our member"
+                        class="u-image-cover">
+                </div>
+                <div class="about-banner__carousel-item">
+                    <img src="./assets/images/about/investment-team/Marcel-Kasumovich.jpg" alt="Our Team member"
+                        class="u-image-cover">
+                </div>
+                <div class="about-banner__carousel-item">
+                    <img src="./assets/images/about/non-investment-team/Sebastian-Pedro-Bea.jpg" alt="Our member"
                         class="u-image-cover">
                 </div>
             </div>
@@ -362,7 +362,7 @@
             </p>
         </div>
     </section>
-    <sectioin class="about-contact no-display-under-991">
+    <sectioin class="about-contact" id="contact">
         <div class="about-contact__container">
             <div class="about-contact__details">
                 <div class="about-contact__title">
@@ -498,11 +498,6 @@
                 Lindsay has an AB Economics and Math from Wellesley College and a Masters of Science in Finance from Boston College.`,
             },
             {
-                "name": "Marcel Kasumovich",
-                "role": "Head of Research",
-                "description": `Marcel Kasumovich has more than twenty-five years of experience in financial markets. He started his career with the Bank of Canada in 1994 working on special studies, including the credit transmission mechanism and high frequency foreign exchange intervention. Marcel joined Goldman Sachs where he served as a strategist for proprietary traders on global macro trading. With a focus on international fixed income, foreign exchange strategy became a crucial component on the strategic implementation of macro risks. Marcel became head of G10 FX Strategy at Merrill Lynch where he built an innovative framework for currency markets. The team contributed to new structured foreign exchange products for private wealth and was the top forecasting unit in 2003. In 2004, Marcel joined Soros Fund Management. As the strategist, he built an infrastructure to support the evaluation of global macro financial issues for thematic research and portfolio implementation. He was a key contributor to the firm's preparedness into the financial crisis. In 2008, Marcel joined former Soros colleagues as an associate founding partner to launch a macro hedge fund, Woodbine Capital. The firm grew assets from less than $100 million to more than $3 billion at its peak. Marcel acted as a Visiting Scholar at the International Monetary Fund in 2012, contributing to diverse work on financial stability. Returning to financial markets, Marcel was a day-one member of a macro hedge fund Tse Capital in 2013 that grew assets from $200 million to $1 billion at its peak. Throughout his career, Marcel built strong connections to finance professionals, policymakers, and entrepreneurs. Those connections are maintained through various ways. Marcel is a partner with Semanteon Capital, a hedge fund focused on machine-learning portfolio management. In the past two years, Marcel supported Semanteon with the creation of an alternative intelligence portfolio manager across fixed income, currency, commodity, and equity assets. He also serves as an advisor to Predata, a company that builds enterprise software for predictive analytics that are used in technology, defense, and finance industries. He is also a member of the Economics Club of New York, a group that brings together leaders in business and politics. Marcel created Pure Macro Capital Advisors to house various start-up investment and advisory interests in 2012. He has been engaged in crypto currencies through Pure Macro since 2012, most actively since 2018. Marcel has published research ranging from academic journals to op-eds. His contribution to Palgrave's Financial Crisis Manual in 2015 warned on the liquidity challenges that fractured markets in 2020.`,
-            },
-            {
                 "name": "Ian Gardiner, CFA",
                 "role": "Head of Wealth One River Digital",
                 "description": `Ian became the Head of Wealth of One River Digital in January 2022. Ian will oversee client relationships, business development and strategic relationships in the wealth channel. Ian leverages over 20 years of experience in institutional investing and alternative strategies. Prior to One River Digital, Ian was an Executive Director on the US Wealth team at AQR Capital Management, beginning in 2015. In this role, he managed strategic client relationships and provided clients with insights & perspectives regarding portfolio construction, asset allocation and investment strategies. Prior to AQR, Ian worked at Bank of America and Credit Suisse as a Director in Equity Sales and as an Equity Research Associate. Ian holds a B.A. in Economics and Spanish from Middlebury College. Ian is a CFA charterholder.`,
@@ -601,16 +596,6 @@
                 `
             },
             {
-                "name": "Sebastian Pedro Bea",
-                "role": "President of One River Digital",
-                "description": `
-                Sebastian Pedro Bea, OLY, is the President of One River Digital. Sebastian, in concert with the team, develops and executes the One River Digital strategic plan. Sebastian is focused on building ORD’s investment platform and global client base. Sebastian also serves as the Head of Sales and Strategy for One River Asset Management. Sebastian and his team help global clients understand, access, and stay connected to the investment capabilities of One River, across both Alternative strategies and Digital assets. Sebastian has 20 years of experience across liquid public markets and institutional investing.
-                <br><br>
-                Prior to joining One River, Sebastian worked at BlackRock, beginning in 2012. Sebastian was most recently a Managing Director at BlackRock, co-leading investment strategy globally for BlackRock Systematic Active Equity. Prior to BlackRock, Sebastian worked at Credit Suisse, beginning in 2001. Sebastian built relationships with institutional investors, delivering the firm’s proprietary data, capital markets product, and firmwide capabilities.
-                <br><br>
-                Sebastian holds a double major in English and Economics from The University of California, Berkeley. Sebastian is a World Champion and Olympic Silver Medalist, in rowing, for the United States of America.`,
-            },
-            {
                 "name": "Jasmine Burgess",
                 "role": "Chief Operating Officer One River Digital",
                 "description": `
@@ -674,15 +659,15 @@
                 Annabel Nottebohm delivers investor relations engagement within One River's Sales & Strategy team. She previously worked as a Business Development and Investor Relations intern at HPS Investment Partners and as an Investor Relations Intern for CapitalSpring. Shortly before joining One River full-time, Annabel will receive a B.A. from Trinity College, graduating summa cum laude.
                 `,
             },
-            {
-                "name": "York Yu",
-                "role": "Digital Operations Technologist",
-                "description": `
-                York Yu is a Digital Operations Technologist at One River Asset Management. York is responsible for the technological development of One River’s growing digital asset management business and focusing on integration with existing framework and better execution. Prior to One River, York founded Transcendence Capital Management in 2018, a quantitative and machine learning driven cryptocurrency trading firm. Prior to Transcendence, York was a Senior Quantitative Analyst at Cyrus Capital Partners, a distressed investment fund, conducting quantitative research on equity and debt instruments and building the risk management system.
-                <br><br>
-                York holds a M.S. degree from Mathematics in Finance program of Courant Institute, New York University, and a B.S. degree from Brown University. He is also a charted Financial Risk Manager(FRM) and holder of Series 3 & 65 licenses by FINRA.
-                `,
-            },
+            // {
+            //     "name": "York Yu",
+            //     "role": "Digital Operations Technologist",
+            //     "description": `
+            //     York Yu is a Digital Operations Technologist at One River Asset Management. York is responsible for the technological development of One River’s growing digital asset management business and focusing on integration with existing framework and better execution. Prior to One River, York founded Transcendence Capital Management in 2018, a quantitative and machine learning driven cryptocurrency trading firm. Prior to Transcendence, York was a Senior Quantitative Analyst at Cyrus Capital Partners, a distressed investment fund, conducting quantitative research on equity and debt instruments and building the risk management system.
+            //     <br><br>
+            //     York holds a M.S. degree from Mathematics in Finance program of Courant Institute, New York University, and a B.S. degree from Brown University. He is also a charted Financial Risk Manager(FRM) and holder of Series 3 & 65 licenses by FINRA.
+            //     `,
+            // },
             {
                 "name": "Theo Antonitis",
                 "role": "Controller",
@@ -758,7 +743,22 @@
                 <br><br>
                 Mathias holds a Bachelor’s degree in Economics and a Computer Science minor. He also graduated with a Masters in Finance degree at the University of Wyoming.
                 `,
-            }
+            },
+            {
+                "name": "Marcel Kasumovich",
+                "role": "Head of Research",
+                "description": `Marcel Kasumovich has more than twenty-five years of experience in financial markets. He started his career with the Bank of Canada in 1994 working on special studies, including the credit transmission mechanism and high frequency foreign exchange intervention. Marcel joined Goldman Sachs where he served as a strategist for proprietary traders on global macro trading. With a focus on international fixed income, foreign exchange strategy became a crucial component on the strategic implementation of macro risks. Marcel became head of G10 FX Strategy at Merrill Lynch where he built an innovative framework for currency markets. The team contributed to new structured foreign exchange products for private wealth and was the top forecasting unit in 2003. In 2004, Marcel joined Soros Fund Management. As the strategist, he built an infrastructure to support the evaluation of global macro financial issues for thematic research and portfolio implementation. He was a key contributor to the firm's preparedness into the financial crisis. In 2008, Marcel joined former Soros colleagues as an associate founding partner to launch a macro hedge fund, Woodbine Capital. The firm grew assets from less than $100 million to more than $3 billion at its peak. Marcel acted as a Visiting Scholar at the International Monetary Fund in 2012, contributing to diverse work on financial stability. Returning to financial markets, Marcel was a day-one member of a macro hedge fund Tse Capital in 2013 that grew assets from $200 million to $1 billion at its peak. Throughout his career, Marcel built strong connections to finance professionals, policymakers, and entrepreneurs. Those connections are maintained through various ways. Marcel is a partner with Semanteon Capital, a hedge fund focused on machine-learning portfolio management. In the past two years, Marcel supported Semanteon with the creation of an alternative intelligence portfolio manager across fixed income, currency, commodity, and equity assets. He also serves as an advisor to Predata, a company that builds enterprise software for predictive analytics that are used in technology, defense, and finance industries. He is also a member of the Economics Club of New York, a group that brings together leaders in business and politics. Marcel created Pure Macro Capital Advisors to house various start-up investment and advisory interests in 2012. He has been engaged in crypto currencies through Pure Macro since 2012, most actively since 2018. Marcel has published research ranging from academic journals to op-eds. His contribution to Palgrave's Financial Crisis Manual in 2015 warned on the liquidity challenges that fractured markets in 2020.`,
+            },
+            {
+                "name": "Sebastian Pedro Bea",
+                "role": "President of One River Digital",
+                "description": `
+                Sebastian Pedro Bea, OLY, is the President of One River Digital. Sebastian, in concert with the team, develops and executes the One River Digital strategic plan. Sebastian is focused on building ORD’s investment platform and global client base. Sebastian also serves as the Head of Sales and Strategy for One River Asset Management. Sebastian and his team help global clients understand, access, and stay connected to the investment capabilities of One River, across both Alternative strategies and Digital assets. Sebastian has 20 years of experience across liquid public markets and institutional investing.
+                <br><br>
+                Prior to joining One River, Sebastian worked at BlackRock, beginning in 2012. Sebastian was most recently a Managing Director at BlackRock, co-leading investment strategy globally for BlackRock Systematic Active Equity. Prior to BlackRock, Sebastian worked at Credit Suisse, beginning in 2001. Sebastian built relationships with institutional investors, delivering the firm’s proprietary data, capital markets product, and firmwide capabilities.
+                <br><br>
+                Sebastian holds a double major in English and Economics from The University of California, Berkeley. Sebastian is a World Champion and Olympic Silver Medalist, in rowing, for the United States of America.`,
+            },
         ];
 
         // academicTeam array
