--- a/alternative.html
+++ b/alternative.html
@@ -137,8 +137,7 @@
                 >
                     <div class="alternative-content__content-inner">
                         <p class="alternative-content__paragraph u-text-white">
-                            (SMA is live. Pending Seed Investment for the
-                            Commingled Vehicle.) The inflation strategy is an
+                            The inflation strategy is an
                             inflation-oriented absolute return, benchmark
                             agnostic strategy that targets a consistent level of
                             active risk. The strategy seeks to benefit from
@@ -246,8 +245,7 @@
                 >
                     <div class="alternative-content__content-inner">
                         <p class="alternative-content__paragraph u-text-white">
-                            (SMA is live. Pending Seed Investment for the
-                            Commingled Vehicle.) The inflation strategy is an
+                            The inflation strategy is an
                             inflation-oriented absolute return, benchmark
                             agnostic strategy that targets a consistent level of
                             active risk. The strategy seeks to benefit from
@@ -282,7 +280,7 @@
                         forefront.
                     </div>
                     <div class="alternative-content__link-container no-display-under-991"> 
-                        <a href="/" class="alternative-content__link">
+                        <a href="/about.html#contact" class="alternative-content__link">
                             CONTACT US
                         </a>
                     </div>
@@ -310,7 +308,7 @@
                 </div>
 
                 <div class="alternative-content__link-container display-under-991"> 
-                    <a href="/" class="alternative-content__link">
+                    <a href="/about.html#contact" class="alternative-content__link">
                         CONTACT US
                     </a>
                 </div>
