--- a/digital.html
+++ b/digital.html
@@ -66,8 +66,8 @@
             <div class="digital-banner__anim-trigger"></div>
             <div class="digital-banner__background">
                 <div class="digital-banner__background-video digital-banner__background-video--active digital-banner__background-video--digital u-image-cover">
-                    <video width="840" height="740" class="u-image-cover digital__video--mobile" loop playsinline autoplay muted preload="metadata" poster="https://bowberes.sirv.com/OneRiver/Digital%20Strategies_60fps.mp4?thumbnail=840">
-                        <source src="https://bowberes.sirv.com/OneRiver/Digital%20Strategies_60fps.mp4" type="video/mp4">
+                    <video width="1170" height="910" class="u-image-cover digital__video--mobile" loop playsinline autoplay muted preload="metadata" poster="https://bowberes.sirv.com/OneRiver/Ethereum_Short_60fps.mp4?thumbnail=1170">
+                        <source src="https://bowberes.sirv.com/OneRiver/Ethereum_Short_60fps.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
                 </div>
@@ -130,7 +130,7 @@
                     We were the first to market in carbon-neutral funds, in off-shore ERISA compliance, and in the use
                     of multiple qualified custodians that deliver maximum investor protection.
                 </p>
-                <a href="/" class="digital-banner__content-cta">
+                <a href="/about.html#contact" class="digital-banner__content-cta">
                     Contact us
                 </a>
             </div>
