--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
                     About
                 </a>
                 <a href="/weekendNotes.html" class="navbar__menu-item">
-                    Data Room
+                    Research
                 </a>
             </div>
             <a href="/" class="navbar__logo">
@@ -60,7 +60,7 @@
                 About
             </a>
             <a href="/weekendNotes.html" class="navbar__menu-item">
-                Data Room
+                Research
             </a>
         </div>
     </nav>
