--- a/alternative.html
+++ b/alternative.html
@@ -36,7 +36,7 @@
                         href="/weekendNotes.html"
                         class="navbar__menu-item navbar__menu-item--light u-text-white"
                     >
-                        Data Room
+                        Research
                     </a>
                 </div>
                 <a href="/" class="navbar__logo backInRight">
@@ -71,7 +71,7 @@
                     Alternatives
                 </a>
                 <a href="/about.html" class="navbar__menu-item"> About </a>
-                <a href="/weekendNotes.html" class="navbar__menu-item"> Data Room </a>
+                <a href="/weekendNotes.html" class="navbar__menu-item"> Research </a>
             </div>
         </nav>
 
@@ -245,28 +245,7 @@
                 >
                     <div class="alternative-content__content-inner">
                         <p class="alternative-content__paragraph u-text-white">
-                            The inflation strategy is an
-                            inflation-oriented absolute return, benchmark
-                            agnostic strategy that targets a consistent level of
-                            active risk. The strategy seeks to benefit from
-                            inflation exposure long term, while capitalizing on
-                            inflation volatility and dislocations
-                            short-and-medium term. Strong and diversifying
-                            sources of alpha within the inflation-sensitive
-                            markets traded should further improve the strategy’s
-                            risk-adjusted return. The strategy takes risk along
-                            three dimensions: Macro Opportunities, Micro
-                            Opportunities, and Relative Value Opportunities.
-                            These three themes each typically occupy a third of
-                            the strategy’s active risk. While we believe this
-                            approach has an ability to generate out-performance
-                            in different market environments, we believe that
-                            the current tailwinds to inflation driven by
-                            unprecedented Monetary and Fiscal Policy represent a
-                            favorable macroeconomic backdrop for such a
-                            strategy. The strategy employs a discretionary
-                            trading approach, where risk management is integral
-                            to every step in the process.
+                            For institutional clients who require a customized solution, One River can deliver any combination of our investment strategies in a fund-of-one, managed account, swap or UCITS compliant structure. We partner with such bespoke clients in one of three ways; (1) they present us with an investment need to tilt their portfolio and/or hedge a specific risk and we then create a combination of our strategies to achieve that objective, (2) they ask us to build a holistic, stand-alone portfolio of our strategies that is designed to fit well within their larger alternatives portfolio, and (3) they turn to us for solutions that materially reduce the expense ratio and increase the capital efficiency of their existing portfolio while maintaining equivalent market exposures.
                         </p>
                     </div>
                 </div>
