--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -27,7 +27,7 @@
                     About
                 </a>
                 <a href="/weekendNotes.html" class="navbar__menu-item">
-                    Data Room
+                    Research
                 </a>
             </div>
 
@@ -59,7 +59,7 @@
                 About
             </a>
             <a href="/weekendNotes.html" class="navbar__menu-item">
-                Data Room
+                Research
             </a>
         </div>
     </nav>
