--- a/termsconditions.html
+++ b/termsconditions.html
@@ -23,7 +23,7 @@
                     About
                 </a>
                 <a href="/weekendNotes.html" class="navbar__menu-item">
-                    Data Room
+                    Research
                 </a>
             </div>
             <a href="index.html" class="navbar__logo backInRight">
@@ -53,7 +53,7 @@
                 About
             </a>
             <a href="/weekendNotes.html" class="navbar__menu-item">
-                Data Room
+                Research
             </a>
         </div>
     </nav>
