--- a/weekendArticle1.html
+++ b/weekendArticle1.html
@@ -25,7 +25,7 @@
                     About
                 </a>
                 <a href="/weekendNotes.html" class="navbar__menu-item navbar__menu-item--active">
-                    Data Room
+                    Research
                 </a>
             </div>
             <a href="/" class="navbar__logo">
@@ -53,7 +53,7 @@
                 About
             </a>
             <a href="/weekendNotes.html" class="navbar__menu-item navbar__menu-item--active">
-                Data Room
+                Research
             </a>
         </div>
     </nav>
