--- a/digital.html
+++ b/digital.html
@@ -25,7 +25,7 @@
                     About
                 </a>
                 <a href="/weekendNotes.html" class="navbar__menu-item">
-                    Data Room
+                    Research
                 </a>
             </div>
             <a href="/" class="navbar__logo backInRight">
@@ -57,7 +57,7 @@
                 About
             </a>
             <a href="/weekendNotes.html" class="navbar__menu-item">
-                Data Room
+                Research
             </a>
         </div>
     </nav>
