--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     About
                 </a>
                 <a href="weekendNotes.html" class="navbar__menu-item">
-                    Data Room
+                    Research
                 </a>
             </div>
             <a href="index.html" class="navbar__logo">
@@ -53,7 +53,7 @@
                 About
             </a>
             <a href="weekendNotes.html" class="navbar__menu-item">
-                Data Room
+                Research
             </a>
         </div>
     </nav>
@@ -146,14 +146,28 @@
             </div>
         </div>
         <div class="home-section__secondary animate__fadeIn">
-            <div class="home-section__award">
-                <img src="./assets/images/HFM-US-Quant-Awards-2021-Performance_CustomWinnerLogos14.png"
-                    alt="HFM US Quant Awards 2021 Performance" class="u-image-contain">
+            <div>
+                <div class="home-section__award" style="opacity: 0;margin-bottom: 30px; margin-top: 35px;">
+                    <img src="./assets/images/MicrosoftTeams-image.png"
+                        alt="HFM US Quant Awards 2021 Performance" class="u-image-contain">
+                </div>
+                <div class="home-section__award">
+                    <img src="./assets/images/HFM+US-PerformanceAwards_WinnerLogos_Quantitative+strat+under+$1bn+-+One+River.png"
+                        alt="HFM US Performance Awards Quantitative" class="u-image-contain">
+                </div>
             </div>
-            <div class="home-section__award">
-                <img src="./assets/images/HFM+US-PerformanceAwards_WinnerLogos_Quantitative+strat+under+$1bn+-+One+River.png"
-                    alt="HFM US Performance Awards Quantitative" class="u-image-contain">
+            
+            <div>
+                <div class="home-section__award" style=" margin-bottom: 30px; margin-top: 35px;">
+                    <img src="./assets/images/MicrosoftTeams-image.png"
+                        alt="HFM US Quant Awards 2021 Performance" class="u-image-contain">
+                </div>
+                <div class="home-section__award">
+                    <img src="./assets/images/HFM+US-PerformanceAwards_WinnerLogos_Quantitative+strat+under+$1bn+-+One+River.png"
+                        alt="HFM US Performance Awards Quantitative" class="u-image-contain">
+                </div>
             </div>
+            
         </div>
         <div href="/" class="home-section__link-container">
             <a href="/" class="home-section__link">
