--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -7,7 +7,22 @@
         <link rel="stylesheet" href="./css/style.css">
         <link rel="stylesheet" href="./assets/fonts/IvyMode/index.css">
         <link rel="stylesheet" href="./assets/fonts/Optima/index.css">
-        <title>One River - Privacy Policy</title>
+        <link rel="shortcut icon" href="./assets/icons/favicon.svg">
+    <title>Privacy Policy - One River Asset Management</title>
+    <meta name="description" content="One River Digital  - Our Privacy Policy">
+    <meta name="keywords" content="One River Digital Asset Management, One River Digital Investment Strategies, Erik Peters, One River AM, One River Digital, One River Investments, One River Asset Management, Asset Manager">    
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="language" content="English">
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-GRPG28921G"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-GRPG28921G');
+  </script>
     </head>
 
 
@@ -26,7 +41,7 @@
                 <a href="/about.html" class="navbar__menu-item">
                     About
                 </a>
-                <a href="/weekendNotes.html" class="navbar__menu-item">
+                <a href="/research.html" class="navbar__menu-item">
                     Research
                 </a>
             </div>
@@ -58,7 +73,7 @@
             <a href="/about.html" class="navbar__menu-item">
                 About
             </a>
-            <a href="/weekendNotes.html" class="navbar__menu-item">
+            <a href="/research.html" class="navbar__menu-item">
                 Research
             </a>
         </div>
@@ -282,6 +297,7 @@
       </div>
   </div>
 </footer>
+
     <script>
         //mobile nav
         const mobileNavButton = document.querySelector('.navbar-mobile__toggle');
